established the beginnings of some js logic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,15 @@ main {
     position: relative;
     top: 100px
 }
+
+.hidden {
+    display: none;
+}
+
+.answers {
+    display: inline-grid;
+}
+
+.answers button {
+    margin: 10px
+}
