--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,18 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: url(../images/avengers-bg.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    font-size: 20px;
+    color: gold
 }
 
 .view {
@@ -22,7 +30,23 @@ main {
 
 .start-screen {
     position: relative;
-    top: 100px
+    top: 100px;
+    margin: 0 200px;
+    font-size: 20px;
+    background: rgba(135,193,255,0.6);
+    color: maroon;
+}
+
+button {
+    font-size: 25px;
+    border: solid gray 3px;
+    border-radius: 12px;
+    background: red;
+    color: gold;
+}
+
+button:hover {
+    opacity: 0.6;
 }
 
 .hidden {
