added general comments; began functionality of storing high scores to local storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,13 @@ button:hover {
 .answers button {
     margin: 10px
 }
+
+/*#end-screen p {
+    position: relative;
+    bottom: 20px;
+}
+
+input {
+    position: relative;
+    bottom: 30px;
+}
